# crawler-engine

./: .gitignore  Cargo.toml  README.md
downloader/: Cargo.toml
downloader/src/: downloader_manager.rs  lib.rs  remote_downloader.rs  request_downloader.rs
engine/: Cargo.toml
engine/src/: lib.rs  prelude.rs  test.rs
engine/src/core/: engine.rs  mod.rs  register_module.rs
engine/src/core/chain/: download_chain.rs  parser_chain.rs  stream_chain.rs  task_model_chain.rs
engine/src/core/events/: event_bus.rs  events.rs  redis_event_handler.rs
engine/src/core/processors/: event_processor.rs
error/: Cargo.toml
js-v8/: Cargo.toml
js-v8/src/: worker.rs
kernel/: Cargo.toml
kernel/src/: error_tracker.rs  lib.rs  state.rs
kernel/src/middleware/: data_middleware.rs  middleware_manager.rs  mod.rs
kernel/src/model/: cookies.rs  data.rs  download_config.rs  headers.rs  login_info.rs  message.rs  meta.rs  mod.rs  model_config.rs  request.rs
kernel/src/module/: mod.rs
kernel/src/parser/: mod.rs
kernel/src/sync/: mod.rs  redis.rs  sync_service.rs
kernel/src/task/: assembler.rs  factory.rs  middleware.rs  module.rs  module_processor_with_chain.rs  repository.rs  task.rs  task_manager.rs
message_queue/: Cargo.toml
message_queue/src/: channel.rs  kafka.rs  lib.rs  queue_manager.rs  redis.rs
processor_chain/: Cargo.toml
processor_chain/src/: lib.rs
processor_chain/src/processors/: processor.rs  processor_chain.rs
proxy/: Cargo.toml
proxy/src/: proxy_impl.rs  proxy_manager.rs  proxy_pool.rs
utils/: Cargo.toml
utils/src/: config.rs  connector.rs  distributed_rate_limit.rs  encrypt.rs  lib.rs  logger.rs  redis_lock.rs  to_numeric.rs  type_convert.rs
