[workspace]
resolver = "3"
members = ["utils", "engine", "processor_chain", "error", "js-v8", "kernel", "message_queue", "proxy", "downloader"]


[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
async-trait = "0.1"
reqwest = { version = "0.12", features = ["cookies", "json", "socks", "gzip", "brotli", "deflate", "zstd"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
toml = "0.9"
uuid = { version = "1", features = ["serde", "v7"] }
url = "2"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
redis = "0.32"
deadpool-redis = { version = "0.22", features = ["json", "script", "serde"] }
sea-orm = { version = "1", features = ["postgres-array", "runtime-tokio-native-tls", "sqlx-postgres"] }
rdkafka = "0.38"
futures = "0.3"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.11"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
tracing-log = "0.2"
once_cell = "1"
reqwest_cookie_store = { version = "0.8", features = ["serde"] }
v8 = "139"
time = { version = "0.3", features = ["local-offset", "formatting", "parsing"] }
polars = { version = "0.50", features = ["json", "lazy", "serde", "csv", "timezones", "strings","ipc","dtype-decimal"] }
polars-ops = { version = "0.50", features = ["pivot"] }
chrono-tz = "0.10"
bytes = { version = "1", features = ["serde"] }
calamine = { version = "0.30", features = ["chrono", "dates"] }
libloading = "0.8"
semver = {version = "1", features = ["serde"]}
dyn-clone = {version = "1"}
base64 = {version = "0.22"}
ring = {version = "0.17"}
md5 = "0.8.0"
regex = {version = "1"}
urlencoding = "2"

utils = { path = "utils" }
engine = { path = "engine" }
processor_chain = { path = "processor_chain" }
error = { path = "error" }
js-v8 = { path = "js-v8" }
kernel = { path = "kernel" }
proxy = { path = "proxy" }
message_queue = { path = "message_queue" }
downloader = { path = "downloader" }

[profile.release]
# Consolidated release profile for all workspace members (per-package overrides can be added if needed):
# [profile.release.package."crate_name"] to customize a specific crate.
opt-level = "z"        # Optimize for size (use "s" for a balanced size/speed tradeoff)
lto = "thin"           # Link Time Optimization; "fat" further reduces size but is slower to compile
codegen-units = 1
panic = "abort"
strip = "symbols"