[package]
publish = ["crates-io"]
edition.workspace = true
version.workspace = true
name = "downloader"

[dependencies]
async-trait.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
log.workspace = true
reqwest_cookie_store.workspace = true
url.workspace = true
dyn-clone.workspace = true
semver.workspace = true
base64.workspace = true

kernel.workspace = true
utils.workspace = true
error.workspace = true
uuid = { version = "1.18.1", features = ["v4"] }
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
futures-util = "0.3.31"


[dev-dependencies]
proxy.workspace = true