[package]
publish = ["crates-io"]
edition.workspace = true
version.workspace = true
name = "proxy"

[dependencies]
async-trait.workspace = true
tokio.workspace = true
serde.workspace = true
time.workspace = true
toml.workspace = true
reqwest_cookie_store.workspace = true
url.workspace = true

error.workspace = true
log.workspace = true