[package]
publish = ["crates-io"]
edition.workspace = true
version.workspace = true
name = "utils"

[dependencies]
reqwest.workspace = true
serde.workspace = true
toml.workspace = true
uuid.workspace = true
serde_json.workspace = true
tokio.workspace = true
redis.workspace = true
deadpool-redis.workspace = true
sea-orm.workspace = true
log.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
tracing-log.workspace = true
once_cell.workspace = true
time.workspace  = true
polars.workspace = true
calamine.workspace = true
ring.workspace = true
md5.workspace = true
regex.workspace = true
error.workspace = true
